# EDA2_Lab

./: .gitignore  CMakeLists.txt  README.md  common.h  main.c
Files/: friends.csv  users.csv
PLANB/: CMakeLists.txt  main.c
PLANB/headers/: users.h
PLANB/sources/: readwrite.cpp  users.c
headers/: PostQueue.h  WordDictionary.h  common.h  csvfriends.h  csvusers.h  handleStack.h  interface.h  posts.h  user_arrays.h  users.h
sources/: PostQueue.c  WordDictionary.c  csvfriends.c  csvusers.c  handleStack.c  interface.c  jsonuser.c  posts.c  user_arrays.c  users.c
